--- a/frame73.html
+++ b/frame73.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="./style.css">
-    </head>
-    <body>
+
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+<body>
     <div class="information">
         <div class="textinformation1">
-            <p >
+            <p>
                 Уфа
             </p>
         </div>
-        <div class="textinformation2">         
+        <div class="textinformation2">
             <a>
-            <p >
-                <a href="https://google.com/">
-                    Контакты
-                </a>
-            </p>
-         </div>
+                <p>
+                    <a href="https://google.com/">
+                        Контакты
+                    </a>
+                </p>
+        </div>
         <div class="textinformation3">
-            <p >
+            <p>
                 График работы:Пн-Пт
             </p>
         </div>
@@ -34,9 +36,31 @@
         <div class="logo">
             <img src="./logo.png" alt="mitin fishing">
         </div>
-        <divn class="search">
+        <div class="search">
             <input type="text" value="" placeholder="Поиск" class="searchsring">
         </div>
+        <div class="catalog">
+            <p>
+                <button>
+                    Каталог
+                </button>
+            </p>
+        </div>
+        <div class="myorders">
+            <p class="myorderstext">
+                <a href="https://google.com/">
+                    Мои заказы
+                </a>
+            </p>
+        </div>
+        <div class="shoppingcart">
+            <p>
+                <a>
+                    Корзина
+                </a>
+            </p>
+        </div>
     </div>
-    </body>
+</body>
+
 </html>
