--- a/frame73.html
+++ b/frame73.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 
-<body>
+<body style="margin: 0%;">
     <div class="information">
         <div class="textinformation1">
             <p>
@@ -39,19 +39,19 @@
         <div class="search">
             <input type="text" value="" placeholder="Поиск" class="searchsring">
         </div>
-        <div class="catalog">
-            <p>
-                <button>
-                    Каталог
-                </button>
-            </p>
-        </div>
         <div class="myorders">
             <p class="myorderstext">
                 <a href="https://google.com/">
                     Мои заказы
                 </a>
             </p>
+        </div>
+        <div class="catalog">
+            <button class="catalogbutton">
+                <img class="catalogimg" src="./catalogbutton.png">
+                Каталог
+                <img class="catalogarrow" src="./arrow.svg">
+             </button>
         </div>
         <div class="shoppingcart">
             <p>
@@ -60,6 +60,12 @@
                 </a>
             </p>
         </div>
+    </div>
+    <div class="divpicture1">
+        <img class="picture1" src="./1.png">
+    </div>
+    <div class="products">
+
     </div>
 </body>
 
